--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
 
-    <h1>Heyyyy there!</h1>
+    <nav>
+        <ul class="navbar">
+            <li class="nav-item">
+                <a href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="/instructors">Instructors</a>
+            </li>
+            <li class="nav-item">
+                <div>
+                    <a>Program</a>
+                    <ul>
+                        <li><a href="/program/overview">Overview</a></li>
+                        <li><a href="/program/logistics">Logistics</a></li>
+                        <li><a href="/program/faq">FAQ</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a href="/application">Application</a>
+            </li>
+            <li class="nav-item">
+                <a href="/students">Students</a>
+            </li>
+        </ul>
+    </nav>
