--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
@@ -16,15 +17,15 @@
             <li class="nav-item">
                 <a href="/instructors">Instructors</a>
             </li>
-            <li class="nav-item">
-                <div>
-                    <a>Program</a>
-                    <ul>
-                        <li><a href="/program/overview">Overview</a></li>
-                        <li><a href="/program/logistics">Logistics</a></li>
-                        <li><a href="/program/faq">FAQ</a></li>
+            <li class="nav-item dropdown-toggle">
+                <!-- <div> -->
+                    <a href="/program">Program</a>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-item"><a href="/program/overview">Overview</a></li>
+                        <li class="dropdown-item"><a href="/program/logistics">Logistics</a></li>
+                        <li class="dropdown-item"><a href="/program/faq">FAQ</a></li>
                     </ul>
-                </div>
+                <!-- </div> -->
             </li>
             <li class="nav-item">
                 <a href="/application">Application</a>
@@ -34,3 +35,7 @@
             </li>
         </ul>
     </nav>
+
+    <div class="testing">
+        
+    </div>
