style navbar, do you like it?

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
 <body>
 
     <nav>
+        <a href="/" class="logo">PACT</a>
         <ul class="navbar">
             <li class="nav-item">
                 <a href="/">Home</a>
