--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,30 +1,49 @@
 html, body {
     margin: auto 0;
     color: #dddddd;
+    font-family: sans-serif;
 }
 /* ---------------NAV--------------- */
 nav {
     position: fixed;
     top: 0;
     width: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navbar {
     list-style-type: none;
     display: flex;
-    width: 100%;
     justify-content: flex-end;
-    padding: 0;
+    align-items: center;
+    padding: 0 10px;
 }
 
 .nav-item {
-    padding: 0 20px;
+    padding: 0 10px;
     /* margin: 15px; */
 }
 
 .nav-item a {
     text-decoration: none;
-    color: black;
+    color: #dddddd;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.nav-item > a:hover {
+    color: #eeeeee;
+}
+
+.logo {
+    margin-right: auto;
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #dddddd;
+    padding: 0 20px;
 }
 
 /* ----------------DROPDOWN----------------- */
@@ -32,20 +51,38 @@ nav {
 .dropdown-menu {
     list-style-type: none;
     display: none;
-    margin: 0;
-    padding: 0;
+    margin: 5px;
+    margin-left: 0;
+    padding: 10px 10px 10px 0;
+    background-color: #eeeeee;
+    border-radius: 5px;
+    
 }
-
-
 
 .dropdown-toggle:hover .dropdown-menu {
     display: block;
     position: absolute;
+    z-index: 1;
+}
+
+.dropdown-toggle:hover > a {
+    color: #eeeeee;
+}
+
+.dropdown-item {
+    padding: 10px;
+    padding-left: 0;
+    border-radius: 10px;
 }
 
 .dropdown-item a {
     text-decoration: none;
     color: black;
+    padding: 10px;
+}
+
+.dropdown-item:hover {
+    background-color: #dddddd;
 }
 
 .testing {
