--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/partials.css">
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 <body>
 
@@ -37,6 +38,4 @@
         </ul>
     </nav>
 
-    <div class="testing">
-        
-    </div>
+    <div class="spacer"></div>
