--- a/views/program/overview.ejs
+++ b/views/program/overview.ejs
@@ -1,2 +1,7 @@
 <%- include("../partials/header") %> 
+
+<header class="gradient">
+    <h1>Overview</h1>
+</header>
+
 <%- include("../partials/footer") %> 
