--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -2,14 +2,14 @@ html, body {
     margin: auto 0;
     color: #dddddd;
     font-family: sans-serif;
-    background-color: black;
+    background-color: #111111;
 }
 /* ---------------NAV--------------- */
 nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: black;
+    background-color: #111111;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -95,5 +95,5 @@ nav {
 footer {
     padding: 40px;
     text-align: center;
-    background-color: black;
+    /* background-color: black; */
 }
