--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,6 @@
 .container {
     background-color: #fcfcfc;
-    padding: 50px
+    padding: 20px 0 0 0;
     /* text-align: center; */
 }
 
@@ -26,6 +26,28 @@ header {
     border-bottom: 0;
 } */
 
+.intro {
+    width: 70%;
+    margin: 100px auto;
+    color: #555555;
+    text-align: center;
+    display: grid;
+    /* padding: auto; */
+    gap: 50px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 100px;
+    justify-items: center;
+    align-items: center;
+}
+
+.intro > p {
+    /* margin: 0 auto; */
+}
+
+.bold {
+    color: #111111;
+}
+
 .group-i, .year-round, .group-ii {
     display: flex;
     justify-content: center;
@@ -43,41 +65,62 @@ header {
 
 .group-i {
     background-image: url("/img/group_i.jpg");
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73) 300px), url('/img/group_i.jpg');
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(83, 15, 66, 0.73) 300px), url('/img/group_i.jpg');
 }
 
 .year-round {
     background-image: url("/img/year_round.jpg");
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73) 300px), url('/img/year_round.jpg');
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(83, 15, 66, 0.73) 300px), url('/img/year_round.jpg');
 }
 
 .group-ii {
     background-image: url("/img/group_ii.jpg");
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73) 300px), url('/img/group_ii.jpg');
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(83, 15, 66, 0.73) 300px), url('/img/group_ii.jpg');
 }
 
-section div {
+.group-i > div, .year-round > div, .group-ii > div {
     margin-top: 300px;
 }
 
-img {
-    /* align-self: center; */
-    width: 100%;
-    max-width: 500px;
-    min-width: 300px;
+.years {
+    /* padding: 50px; */
+    /* color: #222222; */
+    margin: 100px 0;
 }
-/* 
-.year-round{
-    text-align: right;
-} */
 
-/* .year-round img {
-    width: 30%;
-    min-width: 200px;
-    float: left;
-    padding: 25px;
-    padding-top: 0;
-} */
+.years h2 {
+    /* color: #dddddd; */
+    /* background-image: linear-gradient(to right, rgba(117, 19, 93, 0.73), black); */
+    font-size: 2rem;
+    padding: 30px;
+    margin: 0;
+    text-align: center;
+}
+
+.years h3 {
+    font-size: 2.5rem;
+}
+
+.years section {
+    padding: 50px;
+}
+
+.years > section > div {
+    width: 60%;
+    text-align: left;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.years-ii {
+    color: #111111;
+    background-image: linear-gradient(to bottom, #fcfcfc, #dddddd);
+}
+
+.years-adv {
+    color: #dddddd;
+    background-image: linear-gradient(to bottom, rgba(83, 15, 66, 0.9), #111111);
+}
 
 @media only screen and (max-width: 600px) {
     img {
