fix grid to flex :)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,8 @@
     
     <link rel="stylesheet" href="/css/partials.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/overview.css">
+    <link rel="stylesheet" href="/css/logistics.css">
 </head>
 <body>
 
