--- a/views/program/logistics.ejs
+++ b/views/program/logistics.ejs
@@ -1,2 +1,22 @@
 <%- include("../partials/header") %> 
+
+<header class="gradient">
+    <h1>Logistics</h1>
+</header>
+
+<div class="container">
+    <section class="logs">
+        <div>
+            Dates
+        </div>
+        <div>
+            Location
+        </div>
+        <div>
+            Time
+        </div>
+    </section>
+
+</div>
+
 <%- include("../partials/footer") %> 
