--- a/views/program/overview.ejs
+++ b/views/program/overview.ejs
@@ -8,11 +8,11 @@
     <div class="container">
     <section class="intro">
         <p>
-            Two groups of students participate in the summer program. Group I consists of high school students, most without significant background knowledge of computer science.
+            Two groups of students participate in the summer program. <strong>Group I</strong> consists of high school students, most without significant background knowledge of computer science.
         </p>
 
         <p>
-            Group II consists of high school students who participated in the program for a year, undergraduate students, and incoming graduate students with prior experience in theoretical computer science. 
+            Some students continue their studies through the <strong>year-round</strong> program. These students participate in the following summer as part of <strong>Group II</strong>, along with undergraduate students and incoming graduate students with prior experience in theoretical computer science. 
         </p>
 
         <p>
