--- a/views/program/faq.ejs
+++ b/views/program/faq.ejs
@@ -1,2 +1,13 @@
 <%- include("../partials/header") %> 
+
+<header class="gradient">
+    <h1>FAQ</h1>
+</header>
+
+<div class="container">
+    <section>
+        
+    </section>
+</div>
+
 <%- include("../partials/footer") %> 
