--- a/views/program/logistics.ejs
+++ b/views/program/logistics.ejs
@@ -7,13 +7,22 @@
 <div class="container">
     <section class="logs">
         <div>
-            Dates
+            <h2><i class="fas fa-calendar-week"></i></h2>
+            <h2>Dates</h2>
+
+            <p>The program begins in late June, continuing for six to eight weeks through the summer. Dates are to be decided. Last year, the program ran from June 29 until July 31 during the summer of 2020.</p>
         </div>
         <div>
-            Location
+            <h2><i class="fas fa-search-location"></i></h2>
+            <h2>Location</h2>
+            
+            <p>PACT will be taking place virtually this year, as it did last year. Platforms used are Zoom, Gradescope, and Discord. When in-person, the program usually runs on the Princeton University campus.</p>
         </div>
         <div>
-            Time
+            <h2><i class="fas fa-clock"></i></h2>
+            <h2>Time</h2>
+            
+            <p>Group I students meet in the afternoon, and Group II students meet in the morning. Recitations are in the evening. When in-person, meetings take place each weekday from 9:30am-4:30pm, except on nationally observed holidays.</p>
         </div>
     </section>
 
