--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/9b82d76088.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="/css/partials.css">
     <link rel="stylesheet" href="/css/header.css">
@@ -23,7 +24,7 @@
             </li>
             <li class="nav-item dropdown-toggle">
                 <!-- <div> -->
-                    <a href="/program">Program</a>
+                    <a href="/program">Program <i class="fas fa-caret-down"></i></a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item"><a href="/program/overview">Overview</a></li>
                         <li class="dropdown-item"><a href="/program/logistics">Logistics</a></li>
