--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/overview.css">
     <link rel="stylesheet" href="/css/logistics.css">
+    <link rel="stylesheet" href="/css/faq.css">
 </head>
 <body>
 
