--- a/views/program/faq.ejs
+++ b/views/program/faq.ejs
@@ -5,9 +5,17 @@
 </header>
 
 <div class="container">
-    <section>
-        
-    </section>
+    <ul class="faq">
+        <% faq.forEach(f => { %> 
+            <li>
+                <div class="toggle">
+                    <h3><strong>Q.</strong> <%= f.question %></h3>
+                    <i class="fas fa-plus"></i>
+                </div>
+                <p><strong>A.</strong> <%- f.answer %></p>
+            </li>
+        <% }) %> 
+    </ul>
 </div>
 
 <%- include("../partials/footer") %> 
