scrape info, start on instructors

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    padding: 25px 50px 50px 200px;
+    padding: 25px 50px 50px 15%;
     font-size: 3rem;
     /* background-image: linear-gradient(black 50%, orange); */
 }
