--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -41,18 +41,18 @@ strong {
 }
 
 .group-i {
-    background-image: url("/img/group_i.jpg");
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(83, 15, 66, 0.73) 300px), url('/img/group_i.jpg');
+    background-image: url("/img/overview/group_i.jpg");
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(83, 78, 15, 0.73) 300px), url('/img/overview/group_i.jpg');
 }
 
 .year-round {
-    background-image: url("/img/year_round.jpg");
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(83, 15, 66, 0.73) 300px), url('/img/year_round.jpg');
+    background-image: url("/img/overview/year_round.jpg");
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(21, 83, 15, 0.73) 300px), url('/img/overview/year_round.jpg');
 }
 
 .group-ii {
-    background-image: url("/img/group_ii.jpg");
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(83, 15, 66, 0.73) 300px), url('/img/group_ii.jpg');
+    background-image: url("/img/overview/group_ii.jpg");
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(15, 16, 83, 0.73) 300px), url('/img/overview/group_ii.jpg');
 }
 
 .group-i > div, .year-round > div, .group-ii > div {
