draft application page

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -1,2 +1,92 @@
 <%- include("partials/header") %> 
+
+<header class="gradient">
+    <h1>Application</h1>
+</header>
+
+<div class="container">
+    <section class="intro3">
+        <div class="first">
+            <p class="notapp">
+                The Program in Algorithmic and Combinatorial Thinking is now accepting applications for Summer 2021. The application form can be found at:
+            </p>
+
+            <p class="app">
+                https://applypact.com/apply/4
+            </p>
+        </div>
+
+        <div class="second">
+            <h3>
+                Fees
+            </h3>
+            <p>
+                The fee for each admitted student is $1500.  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
+            </p>
+        </div>
+
+        <div class="third">
+            <p>
+                Deadline: We will be doing rolling admissions, i.e., we will review applications every few weeks. All applications received before March 20, 2020 will receive full consideration. We will however continue to accept applications until all seats are taken.
+            </p>
+
+            <h3>
+                Deadline
+            </h3>
+        </div>
+    </section>
+
+    <section class="reqs">
+        <h2>
+            Application Requirements
+        </h2>
+        <div>
+            <div class="req">
+                <h3>
+                    1.&nbsp;Statement of Interest
+                </h3>
+                <p>
+                    A brief description about yourself and why you are interested in participating in the program (PDF document to be uploaded by the applicant).
+                </p>
+                <i class="fas fa-edit"></i>
+            </div>
+    
+            <div class="req">
+                <h3>
+                    2.&nbsp;Transcript
+                </h3>
+                <p>
+                    A copy of your transcript; unofficial will do (PDF file to be uploaded by the applicant).
+                </p>
+                <i class="fas fa-newspaper"></i>
+            </div>
+    
+            <div class="req">
+                <h3>
+                    3.&nbsp;Recommendations
+                </h3>
+                <p>
+                    We require two letters of recommendation, at least one of them should be from your Math teacher. The other one could be from a Math or a Science teacher or from your guidance counselor. The letters must be uploaded by the respective teachers. The applicant will enter the contact information of the teachers and they will be contacted directly.
+                </p>
+                <i class="fas fa-user-edit"></i>
+            </div>
+    
+            <div class="req">
+                <h3>
+                    4.&nbsp;Official Transcript
+                </h3>
+                <p>
+                    Guidance counselor must email an official transcript to the email address: summertcs@gmail.com . In the Subject:, please include “Transcript for Applicant Name”. If your school does not email transcripts, please have them mail hard copies to the attention of Prof. Rajiv Gandhi at 322 Business and Science Building, Dept of Computer Science, Rutgers University – Camden, Camden, NJ 08102.
+                </p>
+                <i class="far fa-newspaper"></i>
+            </div>
+        </div>
+        
+        <p>
+            Questions: Please send email to summertcs@gmail.com.
+        </p>
+
+    </section>
+</div>
+
 <%- include("partials/footer") %> 
