--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/logistics.css">
     <link rel="stylesheet" href="/css/faq.css">
     <link rel="stylesheet" href="/css/instructors.css">
+    <link rel="stylesheet" href="/css/application.css">
 </head>
 <body>
 
