draft students page, no quote or carousel

--- a/views/application.ejs
+++ b/views/application.ejs
@@ -27,7 +27,7 @@
 
         <div class="third">
             <p>
-                Deadline: We will be doing rolling admissions, i.e., we will review applications every few weeks. All applications received before March 20, 2020 will receive full consideration. We will however continue to accept applications until all seats are taken.
+                We will be doing rolling admissions, i.e., we will review applications every few weeks. All applications received before March 20, 2020 will receive full consideration. We will however continue to accept applications until all seats are taken.
             </p>
 
             <h3>
