--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/faq.css">
     <link rel="stylesheet" href="/css/instructors.css">
     <link rel="stylesheet" href="/css/application.css">
+    <link rel="stylesheet" href="/css/students.css">
 </head>
 <body>
 
