drafted home page :D

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,73 @@
-<%- include("partials/header", {help: 0}) %> 
+<%- include("partials/header") %> 
+
+<header class="gradient">
+    <h1>Program in Algorithmic and Combinatorial Thinking</h1>
+</header>
+
+<div>
+    <section>
+        <div class="home left work">
+            <p>
+                Picture a room full of students hard at work on math problems.
+            </p>
+        </div>
+        <div class="home right chalkboard">
+            <p>
+                Some draw graphs on the chalkboard, testing out algorithms.
+            </p>
+        </div>
+        <div class="home left expressions">
+            <p>
+                Others shuffle complicated algebraic expressions, trying to simplify a summation.
+            </p>
+        </div>
+        <div class="home right lemma">
+            <p>
+                Still others stare intently at a piece of paper, trying to find the one necessary final lemma to complete a proof or to understand a recent result.
+            </p>
+        </div>
+        <div class="home left fun">
+            <p>
+                The students are all working hard, but they are also having fun, as the air is ripe with the excitement of discovery.
+            </p>
+        </div>
+        <div class="home right college">
+            <p>
+                These are not college students, though they are studying at a college campus, and learning material that is not normally taught until the undergraduate or even the graduate level.
+            </p>
+        </div>
+        <div class="home left summer">
+            <p>
+                Rather, these are mostly high school students, spending the summer learning and enjoying themselves, studying theoretical computer science.
+            </p>
+        </div>
+    </section>
+
+    <section class="quote">
+        <div>
+            <div>
+                <h3>But if this is computer science...</h3>
+            </div>
+            <div class="pushed">
+                <h3>...where are the computers?</h3>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="modern">
+            <img src="/img/home/modern.jpg" alt="">
+            <div>
+                <p>
+                    <span class="big">While it is true </span>that computers and programming are a major part of modern computer science, the Program in Algorithmic and Combinatorial Thinking (PACT) – supported partially through the National Science Foundation – goes beyond that. The program teaches students about the mathematics and algorithms fundamental to the computer science field. Many summer programs teach high school students programming and application development, but this five-week intensive course is one of very few with a theoretical and proof-based emphasis.
+                </p>
+            </div>
+        </div>
+
+        <div class="requirements">
+            <p>The only requirements to participate&nbsp;are<br>high school algebra,<br>willingness to work hard and be challenged,<br>and, above all,<br>the desire to learn.</p>
+        </div>
+    </section>
+</div>
+
 <%- include("partials/footer") %> 
