--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/instructors.css">
     <link rel="stylesheet" href="/css/application.css">
     <link rel="stylesheet" href="/css/students.css">
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
 
