--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,8 @@
 <%- include("partials/header") %> 
 
 <header class="gradient">
-    <h1>Program in Algorithmic and Combinatorial Thinking</h1>
+    <h1>PACT</h1>
+    <p>Program in Algorithmic and Combinatorial Thinking</p>
 </header>
 
 <div>
