--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -20,17 +20,19 @@
             <p>
                 His research interests are Algorithm Design, Combinatorial Optimization, and Probabilistic methods. He is a passionate educator and has worked with students with varied backgrounds, and he received the Provost’s Award for Teaching Excellence at Rutgers–Camden in 2006.  He received a Fulbright fellowship to teach in Mumbai, India from Jan-May 2011.
             </p>
+            <div class="text1">
+                <p>
+                    In 2009, Professor Gandhi gave a lecture to a group of students at the Cherry Hill East high school and volunteered to teach a group of students topics in Discrete Mathematics during Saturdays over the course of the school year 2009-2010. He then continued to work with these students over the summer of 2010. In summer 2011, he worked with the Center for Computational Intractability to hold a similar program on the Princeton campus, and this program was repeated in the summer of 2012. Thus PACT was born.
+                </p>
+                
+                <p>
+                    Professor Gandhi has given an inspirational TEDx Talk in 2016 called “From Potential To Promise: Developing scholars, one eureka moment at a time” which can be found below.
+                </p>
             
-            <p>
-                In 2009, Professor Gandhi gave a lecture to a group of students at the Cherry Hill East high school and volunteered to teach a group of students topics in Discrete Mathematics during Saturdays over the course of the school year 2009-2010. He then continued to work with these students over the summer of 2010. In summer 2011, he worked with the Center for Computational Intractability to hold a similar program on the Princeton campus, and this program was repeated in the summer of 2012. Thus PACT was born.
-            </p>
-            
-            <p>
-                Professor Gandhi has given an inspirational TEDx Talk in 2016 called “From Potential To Promise: Developing scholars, one eureka moment at a time” which can be found below.
-            </p>
 
-            <div class="iframe">
-                <iframe src="https://www.youtube.com/embed/Kao_IZUCKgg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="iframe">
+                    <iframe src="https://www.youtube.com/embed/Kao_IZUCKgg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
