--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -1,7 +1,7 @@
 .faq {
     color: #666666;
     padding: 50px;
-    width: 50%;
+    width: 800px;
     margin: 0 auto;
     list-style-type: none;
 }
@@ -52,4 +52,13 @@
 
 .toggle:hover strong, .active strong {
     color: #fefefe;
+}
+
+
+/* -----------------------MEDIA QUERIES--------------------- */
+
+@media only screen and (max-width: 1000px) {
+    .faq {
+        width: 80%;
+    }
 }
