--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -98,3 +98,15 @@ strong {
     color: #dddddd;
     background-image: linear-gradient(to bottom, rgba(83, 15, 66, 0.9), #111111);
 }
+
+/* -----------------------MEDIA QUERIES--------------------- */
+
+@media only screen and (max-width: 1000px) {
+    .group-i, .year-round, .group-ii, .years > section > div {
+        width: 80%;
+    }
+
+    .years > section {
+        padding: 0;
+    }
+}
