--- a/public/css/students.css
+++ b/public/css/students.css
@@ -1,7 +1,3 @@
-/* .group_photos ~ .container {
-    padding: none;
-} */
-
 .group_photos {
     background-image: linear-gradient(rgba(15, 16, 83, 1), #111111);
     padding: 20px 0;
@@ -20,6 +16,8 @@
 
 .group_photos .group img {
     width: 100%;
+    max-height: 75vh;
+    object-fit: cover;
     transition: all 0.4s;
     cursor: pointer;
 }
@@ -36,4 +34,16 @@
 
 .active, .group img:hover {
     box-shadow: 0 0 15px 7px rgba(166, 167, 202, 0.7);
+}
+
+/* -----------------------MEDIA QUERIES--------------------- */
+
+@media only screen and (max-width: 1000px) {
+    .group_photos .group {
+        width: 90%;
+    }
+
+    .group_photos .group h3 {
+        font-size: 2rem;
+    }
 }
